docs: document the management port, observability acceptance and monitor